# gx-mcp-server

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Justfile  README.md  ROADMAP-v2.md  SUBMISSION_INFO.md  architecture_mermaid.md  main.py  post1.md  publish.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  smithery.yaml
.github/workflows/: ci.yaml  publish.yaml
examples/: ai_expectation_roundtrip.py  auth_test.py  basic_roundtrip.py  manual_test.py  security_checks.py  test_mcp_direct.py  use_curl.sh
gc_mcp_server/: __init__.py
gx_mcp_server/: __init__.py  __main__.py  app.py  basic_auth.py  bearer_auth.py  logging.py  oauth_token.py  origin_validator.py  server.py
gx_mcp_server/connectors/: bigquery.py
gx_mcp_server/core/: context.py  schema.py  storage.py
gx_mcp_server/tools/: __init__.py  datasets.py  expectations.py  health.py  validation.py
scripts/: gx_request_response_demo.py  publish-to-registries.sh  registries.yaml  run_examples.py
src/gx_mcp_simple/: __init__.py  __main__.py  server.py
src/gx_mcp_stdio/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_basic_auth.py  test_bearer_auth.py  test_cli_flags.py  test_csv_size_limit.py  test_datasets.py  test_datasets_edge_cases.py  test_error_handling.py  test_expectations.py  test_fastmcp.py  test_mcp_logic.py  test_origin_validator.py  test_parallel_validation.py  test_rate_limiting.py  test_validation.py
